// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration tests with real app cookie parameters are validated 1`] = `
Object {
  "error": Object {
    "data": Array [
      Object {
        "instancePath": "/cookies",
        "keyword": "required",
        "message": "must have required property 'session'",
        "params": Object {
          "missingProperty": "session",
        },
        "schemaPath": "#/properties/cookies/required",
      },
    ],
    "message": "Error while validating request: request/cookies must have required property 'session'",
    "name": "ValidationError",
  },
}
`;

exports[`Integration tests with real app header parameters are validated 1`] = `
Object {
  "error": Object {
    "data": Array [
      Object {
        "instancePath": "/headers",
        "keyword": "required",
        "message": "must have required property 'x-param'",
        "params": Object {
          "missingProperty": "x-param",
        },
        "schemaPath": "#/properties/headers/required",
      },
    ],
    "message": "Error while validating request: request/headers must have required property 'x-param'",
    "name": "ValidationError",
  },
}
`;

exports[`Integration tests with real app path parameters are validated 1`] = `
Object {
  "error": Object {
    "data": Array [
      Object {
        "instancePath": "/params/id",
        "keyword": "pattern",
        "message": "must match pattern \\"^[0-9]+$\\"",
        "params": Object {
          "pattern": "^[0-9]+$",
        },
        "schemaPath": "#/properties/params/properties/id/pattern",
      },
    ],
    "message": "Error while validating request: request/params/id must match pattern \\"^[0-9]+$\\"",
    "name": "ValidationError",
  },
}
`;

exports[`Integration tests with real app query parameters are validated 1`] = `
Object {
  "error": Object {
    "data": Array [
      Object {
        "instancePath": "/query",
        "keyword": "required",
        "message": "must have required property 'param'",
        "params": Object {
          "missingProperty": "param",
        },
        "schemaPath": "#/properties/query/required",
      },
    ],
    "message": "Error while validating request: request/query must have required property 'param'",
    "name": "ValidationError",
  },
}
`;

exports[`Integration tests with real app query parameters are validated 2`] = `
Object {
  "error": Object {
    "data": Array [
      Object {
        "instancePath": "/query",
        "keyword": "required",
        "message": "must have required property 'param'",
        "params": Object {
          "missingProperty": "param",
        },
        "schemaPath": "#/properties/query/required",
      },
    ],
    "message": "Error while validating request: request/query must have required property 'param'",
    "name": "ValidationError",
  },
}
`;

exports[`Integration tests with real app requests against /echo are validated correctly 1`] = `
Object {
  "error": Object {
    "data": Array [
      Object {
        "instancePath": "/body",
        "keyword": "required",
        "message": "must have required property 'input'",
        "params": Object {
          "missingProperty": "input",
        },
        "schemaPath": "#/properties/body/required",
      },
    ],
    "message": "Error while validating request: request/body must have required property 'input'",
    "name": "ValidationError",
  },
}
`;

exports[`Integration tests with real app requests against /match are validated correctly 1`] = `
Object {
  "error": Object {
    "data": Array [
      Object {
        "instancePath": "/body",
        "keyword": "required",
        "message": "must have required property 'input'",
        "params": Object {
          "missingProperty": "input",
        },
        "schemaPath": "#/properties/body/required",
      },
    ],
    "message": "Error while validating request: request/body must have required property 'input'",
    "name": "ValidationError",
  },
}
`;

exports[`Integration tests with real app requests against /match are validated correctly 2`] = `
Object {
  "error": Object {
    "data": Array [
      Object {
        "instancePath": "/body",
        "keyword": "required",
        "message": "must have required property 'input'",
        "params": Object {
          "missingProperty": "input",
        },
        "schemaPath": "#/properties/body/required",
      },
    ],
    "message": "Error while validating request: request/body must have required property 'input'",
    "name": "ValidationError",
  },
}
`;

exports[`Integration tests with real app requests against /no-match cause an error 1`] = `
Object {
  "error": Object {
    "message": "Path=/no-match with method=post not found from OpenAPI document",
    "name": "Error",
  },
}
`;
